--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZW2Gl6phfmRCTcC0SHOK5SlRQPoo0n0"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/knockout/dist/knockout.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/ajax.js"></script>
+    <script type="text/javascript" src="dist/app.min.js"></script>
 </body>
 </html>
