Remove type attr from script tags

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
     </div>
 
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZW2Gl6phfmRCTcC0SHOK5SlRQPoo0n0"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/knockout/dist/knockout.js"></script>
-    <script type="text/javascript" src="dist/app.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZW2Gl6phfmRCTcC0SHOK5SlRQPoo0n0"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/ajax.js"></script>
 </body>
 </html>
