--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <title>Neighborhood Map Project</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <style>#map-canvas,body,html{height:100%;margin:0;padding:0}body{font-family:Arial;font-size:.9em;color:#555}h3{font-size:1.25em}ul{list-style:none;padding-left:0;border-radius:5px}li{padding-left:2em}li:hover{color:#fff;background-color:#F0994D}a{color:#F0994D;text-decoration:none}a:visited{color:#F0994D}.absolute{position:absolute}#reset-button{right:0;bottom:0}#reset{height:3em}#input{width:100%;height:2.2em}#arrow{left:40%;width:3em}#list-container{width:100%;top:0}#sidebar-inner,#sidebar-outer{width:204px}#sidebar-outer{top:-350px}#sidebar-inner{overflow:scroll;height:20em}#list-item{border:1px solid grey;border-top:none;padding:.6em}#sidebar-inner,#wiki-container{background-color:#fff;border-radius:5px}#weather-container-outer{overflow:hidden;left:0;bottom:0;width:100%;height:400px;pointer-events:none}#weather-container{left:0;bottom:-400px;width:100%;height:400px;background:-webkit-linear-gradient(skyblue,transparent),-webkit-linear-gradient(to right,#fff,transparent);background:-o-linear-gradient(skyblue,transparent),-o-linear-gradient(to right,#fff,transparent);background:linear-gradient(skyblue,transparent),linear-gradient(to right,#fff,transparent);background-blend-mode:screen}#weather-logo{bottom:0;left:50%}#weather-logo img{width:48px;height:48px;border-radius:100%;margin:0 auto}#weather-container *{margin-left:5%}td{padding:3px;border:1px solid #bbb}@media screen and (min-width:480px){#input,#list-container{width:15em}#weather-container,#weather-container-outer{width:30em}#weather-logo{bottom:0;left:135px}#weather-container *{margin-left:20%}#weather-logo img{width:70px;height:70px}}
-</style>
+  <link rel="stylesheet" href="css/style.css">
+ <!-- <style>#map-canvas,body,html{height:100%;margin:0;padding:0}body{font-family:Arial;font-size:.9em;color:#555}h3{font-size:1.25em}ul{list-style:none;padding-left:0;border-radius:5px}li{padding-left:2em}li:hover{color:#fff;background-color:#F0994D}a{color:#F0994D;text-decoration:none}a:visited{color:#F0994D}.absolute{position:absolute}#reset-button{right:0;bottom:0}#reset{height:3em}#input{width:100%;height:2.2em}#arrow{left:40%;width:3em}#list-container{width:100%;top:0}#sidebar-inner,#sidebar-outer{width:204px}#sidebar-outer{top:-350px}#sidebar-inner{overflow:scroll;height:20em}#list-item{border:1px solid grey;border-top:none;padding:.6em}#sidebar-inner,#wiki-container{background-color:#fff;border-radius:5px}#weather-container-outer{overflow:hidden;left:0;bottom:0;width:100%;height:400px;pointer-events:none}#weather-container{left:0;bottom:-400px;width:100%;height:400px;background:-webkit-linear-gradient(skyblue,transparent),-webkit-linear-gradient(to right,#fff,transparent);background:-o-linear-gradient(skyblue,transparent),-o-linear-gradient(to right,#fff,transparent);background:linear-gradient(skyblue,transparent),linear-gradient(to right,#fff,transparent);background-blend-mode:screen}#weather-logo{bottom:0;left:50%}#weather-logo img{width:48px;height:48px;border-radius:100%;margin:0 auto}#weather-container *{margin-left:5%}td{padding:3px;border:1px solid #bbb}@media screen and (min-width:480px){#input,#list-container{width:15em}#weather-container,#weather-container-outer{width:30em}#weather-logo{bottom:0;left:135px}#weather-container *{margin-left:20%}#weather-logo img{width:70px;height:70px}}
+</style> -->
 </head>
 
 <body>
 
 
-    <div id="map-canvas"></div>
+    <div id="map-canvas" class="canvas"></div>
 
 
     <div id="list-container" class="absolute">
@@ -19,17 +20,17 @@
             <input id="input" name="search" type="text" data-bind="textInput: query, valueUpdate: 'keydown'" autocomplete="off" placeholder="Search for a location...">
         </div>
 
-        <div id="sidebar-outer" class="absolute">
-            <div id="sidebar-inner">
+        <div id="sidebar-outer" class="absolute listnav-out">
+            <div id="sidebar-inner" class="listnav-in">
                 <ul data-bind="template: {name: 'marker', foreach: allMarkers}"></ul>
 
                 <script type="text/html" id="marker">
                     <div data-bind="visible: visible">
                         <a href="#" data-bind="attr: {id: id}">
                             <li>
-                                <strong data-bind="text: name"></strong>
-                                <p data-bind="text: street"></p>
-                                <p data-bind="text: city"></p>
+                                <strong data-bind="text: name" class="nav-links-strong"></strong>
+                                <p data-bind="text: street" class="nav-links"></p>
+                                <p data-bind="text: city" class="nav-links"></p>
                             </li>
                         </a>
                     </div>
@@ -45,11 +46,11 @@
 
     </div>
 
-    <div id="weather-container-outer" class="absolute">
-        <div id="weather-container" class="absolute"></div>
+    <div id="weather-container-outer" class="absolute weather-holder-outer">
+        <div id="weather-container" class="absolute weather-holder-inner"></div>
     </div>
 
-    <div id="weather-logo" class="absolute">
+    <div id="weather-logo" class="absolute weather-logo">
 
             <a href="#">
                 <img src="img/OpenWeatherMap-icon.png" alt="OpenWeatherMap Icon">
