--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZW2Gl6phfmRCTcC0SHOK5SlRQPoo0n0"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/ajax.js"></script>
+    <script src="dist/app.min.js"></script>
 </body>
 </html>
